--- a/apps/web/src/components/modules/AtAGlanceModule.astro
+++ b/apps/web/src/components/modules/AtAGlanceModule.astro
@@ -25,7 +25,7 @@ const animations = await Promise.all(
 ---
 
 <LandingLayout>
-	<h2 class="headline-extralight col-span-full mb-4 text-center">
+	<h2 class="headline-extralight col-span-full mb-4">
 		{title}
 	</h2>
 	<section class="add-a-glance-section col-span-full">
