--- a/apps/web/src/pages/[slug].astro
+++ b/apps/web/src/pages/[slug].astro
@@ -1,4 +1,5 @@
 ---
+import CaseHero from "@/components/astro/CaseHero.astro";
 import PageModules from "@/components/astro/PageModules.astro";
 import PageLayout from "@/layouts/PageLayout.astro";
 import { pagesResult } from "@/scripts/queries";
@@ -24,5 +25,6 @@ const { page } = Astro.props;
 ---
 
 <PageLayout title={page.title ?? undefined}>
+	{page.case && <CaseHero {...page} />}
 	<PageModules modules={page.modules} />
 </PageLayout>
