--- a/apps/web/src/components/astro/PageModules.astro
+++ b/apps/web/src/components/astro/PageModules.astro
@@ -1,7 +1,12 @@
 ---
+import ArticleFigureModule from "@/components/modules/ArticleFigureModule.astro";
+import ArticleGalleryModule from "@/components/modules/ArticleGalleryModule.astro";
+import ArticleQuoteModule from "@/components/modules/ArticleQuoteModule.astro";
+import ArticleStatsModule from "@/components/modules/ArticleStatsModule.astro";
+import ArticleTextModule from "@/components/modules/ArticleTextModule.astro";
 import AtAGlanceModule from "@/components/modules/AtAGlanceModule.astro";
+import CaseHighlightsModule from "@/components/modules/CaseHighlightsModule.astro";
 import HighlightsModule from "@/components/modules/HighlightsModule.astro";
-import NewsModule from "@/components/modules/NewsModule.astro";
 import SideBySideModule from "@/components/modules/SideBySideModule.astro";
 import type { PageModules } from "@/scripts/queries";
 
@@ -21,8 +26,18 @@ const { modules } = Astro.props;
 				return <SideBySideModule {...module} />;
 			case "highlightsModule":
 				return <HighlightsModule {...module} />;
-			case "newsModule":
-				return <NewsModule {...module} />;
+			case "caseHighlightsModule":
+				return <CaseHighlightsModule {...module} />;
+			case "articleTextModule":
+				return <ArticleTextModule {...module} />;
+			case "articleQuoteModule":
+				return <ArticleQuoteModule {...module} />;
+			case "articleStatsModule":
+				return <ArticleStatsModule {...module} />;
+			case "articleGalleryModule":
+				return <ArticleGalleryModule {...module} />;
+			case "articleFigureModule":
+				return <ArticleFigureModule {...module} />;
 			default:
 				return null;
 		}
