--- a/apps/web/src/components/astro/SanityImage.astro
+++ b/apps/web/src/components/astro/SanityImage.astro
@@ -1,6 +1,7 @@
 ---
 import { buildSanityImage } from "@/scripts/image-url-builder";
 import type { ImageCombo } from "@novo-holdings-annual-report-2024/studio/types";
+import { Image } from "astro:assets";
 
 interface Props extends ImageCombo {
 	alt: string;
@@ -11,10 +12,22 @@ interface Props extends ImageCombo {
 }
 
 const { alt, width, height, class: className, sizes, asset } = Astro.props;
+const maxWidth = 1504;
 
 if (!asset) return null;
 
-const url = buildSanityImage(asset, { width, height });
+const url = buildSanityImage(asset, {
+	width: Math.min(width ?? maxWidth, maxWidth),
+	height,
+});
 ---
 
-<img src={url} alt={alt} class={className} sizes={sizes} />
+<Image
+	src={url ?? ""}
+	alt={alt}
+	class={className}
+	width={width}
+	height={height}
+	inferSize
+	sizes={sizes}
+/>
