--- a/apps/web/src/components/modules/ArticleFigureModule.astro
+++ b/apps/web/src/components/modules/ArticleFigureModule.astro
@@ -1,9 +1,9 @@
 ---
 import SanityImage from "@/components/astro/SanityImage.astro";
 import CaseLayout from "@/layouts/CaseLayout.astro";
-import type { CaseModuleProps } from "@/scripts/queries";
+import type { PageModuleProps } from "@/scripts/queries";
 
-type Props = CaseModuleProps<"articleFigureModule">;
+type Props = PageModuleProps<"articleFigureModule">;
 
 const { image } = Astro.props;
 if (!image) return null;
