--- a/apps/web/src/components/modules/ArticleGalleryModule.astro
+++ b/apps/web/src/components/modules/ArticleGalleryModule.astro
@@ -1,9 +1,9 @@
 ---
 import SanityImage from "@/components/astro/SanityImage.astro";
 import { Carousel } from "@/components/solid/carousel";
-import type { CaseModuleProps } from "@/scripts/queries";
+import type { PageModuleProps } from "@/scripts/queries";
 
-type Props = CaseModuleProps<"articleGalleryModule">;
+type Props = PageModuleProps<"articleGalleryModule">;
 
 const { images } = Astro.props;
 ---
