--- a/apps/web/src/layouts/CaseLayout.astro
+++ b/apps/web/src/layouts/CaseLayout.astro
@@ -3,9 +3,7 @@ import MainLayout from "@/layouts/MainLayout.astro";
 ---
 
 <MainLayout>
-	<section
-		class="col-span-full mb-[4rem] md:col-span-6 md:col-start-4 md:mb-[6rem]"
-	>
+	<section class="col-span-full mb-16 md:col-span-6 md:col-start-4 md:mb-24">
 		<slot />
 	</section>
 </MainLayout>
