--- a/apps/web/src/components/modules/CaseHighlightsModule.astro
+++ b/apps/web/src/components/modules/CaseHighlightsModule.astro
@@ -13,10 +13,11 @@ const { title, cases } = Astro.props;
 		{title}
 	</h3>
 	{
-		cases?.map((c) => (
-			<div class={cases.length <= 2 ? "col-span-6" : "col-span-4"}>
-				<CaseCard {...c} />
-			</div>
+		cases?.map((card) => (
+			<CaseCard
+				{...card}
+				class:list={[cases.length <= 2 ? "col-span-6" : "col-span-4", "z-10"]}
+			/>
 		))
 	}
 </LandingLayout>
