feat: Image blur, magnetic, other

--- a/apps/web/src/components/astro/BlurShadow.astro
+++ b/apps/web/src/components/astro/BlurShadow.astro
@@ -5,10 +5,10 @@
 				class:list={[
 					"col-[1] row-[1]",
 					{
-						"-z-1 opacity-0 transition-all duration-400 ease-out group-hover:opacity-30":
+						"-z-1 opacity-0 transition-all duration-400 ease-out group-hover:opacity-40":
 							index !== 2,
-						"blur-xl": index === 0,
-						"blur-3xl": index === 1,
+						"blur-md": index === 0,
+						"blur-xl": index === 1,
 					},
 				]}
 			>
