--- a/apps/web/src/components/astro/Button.astro
+++ b/apps/web/src/components/astro/Button.astro
@@ -1,7 +1,7 @@
 ---
 import Icon from "@/components/astro/Icon.astro";
+import Link from "@/components/astro/Link.astro";
 import type { PageModuleProps } from "@/scripts/queries";
-import Link from "./Link.astro";
 
 type Props = Partial<
 	Extract<
