--- a/apps/web/src/components/astro/CaseCard.astro
+++ b/apps/web/src/components/astro/CaseCard.astro
@@ -33,8 +33,8 @@ const { heroImage, project, startDate, endDate } = Astro.props?.case ?? {};
 							<SanityImage
 								{...heroImage}
 								alt={title ?? ""}
-								width={800}
-								class="z-1 aspect-[5/4] h-auto w-full rounded-lg object-cover"
+								width={490}
+								class="aspect-[5/4] h-auto w-full rounded-lg object-cover"
 							/>
 						)
 					}
