--- a/apps/web/src/components/modules/ArticleGalleryModule.astro
+++ b/apps/web/src/components/modules/ArticleGalleryModule.astro
@@ -13,7 +13,7 @@ const { images } = Astro.props;
 		{
 			images?.map((image) => (
 				<div class="embla__slide min-w-0 shrink-0 grow-0 basis-full">
-					<SanityImage alt="" {...image} />
+					<SanityImage {...image} />
 				</div>
 			))
 		}
