--- a/apps/web/src/layouts/CaseLayout.astro
+++ b/apps/web/src/layouts/CaseLayout.astro
@@ -1,9 +1,20 @@
 ---
 import MainLayout from "@/layouts/MainLayout.astro";
+
+interface Props {
+	fullWidth?: boolean;
+}
+
+const { fullWidth } = Astro.props;
 ---
 
 <MainLayout>
-	<section class="col-span-full mb-16 md:col-span-6 md:col-start-4 md:mb-24">
+	<section
+		class:list={[
+			"col-span-full mb-16 md:mb-24",
+			!fullWidth && "md:col-span-6 md:col-start-4",
+		]}
+	>
 		<slot />
 	</section>
 </MainLayout>
