--- a/apps/web/src/components/astro/CaseCard.astro
+++ b/apps/web/src/components/astro/CaseCard.astro
@@ -33,7 +33,7 @@ const { heroImage, project, startDate, endDate } = Astro.props?.case ?? {};
 							<SanityImage
 								{...heroImage}
 								alt={title ?? ""}
-								width={490}
+								width={744 * 2}
 								class="aspect-[5/4] h-auto w-full rounded-lg object-cover"
 							/>
 						)
