--- a/apps/web/src/components/astro/Footer.astro
+++ b/apps/web/src/components/astro/Footer.astro
@@ -9,7 +9,7 @@ type Props = GlobalSettings;
 const { footer } = Astro.props;
 ---
 
-<footer class="bg-novo-blue w-full text-white">
+<footer class="bg-novo-blue mt-24 w-full text-white">
 	<div
 		class="mx-auto grid w-full max-w-[100rem] gap-[12.5rem] px-[1.5rem] py-[1.5rem] md:px-[3rem] md:pb-[2.5rem]"
 	>
