--- a/apps/web/src/styles/global.css
+++ b/apps/web/src/styles/global.css
@@ -203,7 +203,7 @@ body {
 }
 
 .side-by-side-module h2 {
-	@apply mb-6 font-sans text-[1.75rem] leading-[115%] font-extralight -tracking-[1%] md:mb-8 md:text-[2.625rem];
+	@apply mb-6 font-sans text-[1.75rem] leading-[115%] font-extralight -tracking-[1%] md:mb-8 md:pr-8 md:text-[2.625rem];
 }
 
 .side-by-side-module strong {
