feat: Lottie intersection observer mobile, overview to hash

--- a/apps/web/src/components/astro/CaseCard.astro
+++ b/apps/web/src/components/astro/CaseCard.astro
@@ -22,7 +22,8 @@ const { heroImage, project, startDate, endDate } = Astro.props?.case ?? {};
 		pressable
 		hoverActiveScale={1.02}
 		moveStrength={{ x: 8, y: 8 }}
-		hoverOpacity={0.95}
+		hoverOpacity={0.9}
+		pressOpacity={0.8}
 		class="group"
 	>
 		<Link link={{ slug }}>
