--- a/apps/web/src/components/astro/OverviewButton.astro
+++ b/apps/web/src/components/astro/OverviewButton.astro
@@ -18,7 +18,7 @@ import MainLayout from "@/layouts/MainLayout.astro";
 		<Button
 			icon="arrow_back"
 			link={{
-				slug: " ",
+				slug: "#case-highlights",
 				text: "Back to overview",
 				external: null,
 				mailto: null,
