fix: Lottie grid

--- a/apps/web/src/components/modules/ArticleQuoteModule.astro
+++ b/apps/web/src/components/modules/ArticleQuoteModule.astro
@@ -10,7 +10,7 @@ const { quote, author, jobTitle, image } = Astro.props;
 
 <CaseLayout>
 	<blockquote class="quote pb-[2rem]">
-		“{quote}”
+		{quote}
 	</blockquote>
 	{
 		author && (
