--- a/apps/web/src/styles/global.css
+++ b/apps/web/src/styles/global.css
@@ -114,6 +114,7 @@
 	--color-sky-blue: #b5d5e6;
 	--color-seafoam-green: #6dc28d;
 	--color-light-blue: #b2b7cd;
+	--color-grey-blue: #43485c;
 }
 
 body {
