--- a/apps/web/src/components/modules/CaseHighlightsModule.astro
+++ b/apps/web/src/components/modules/CaseHighlightsModule.astro
@@ -15,5 +15,9 @@ const { title, cases } = Astro.props;
 	>
 		{title}
 	</h3>
-	{cases?.map((card) => <CaseCard {...card} class="z-10 col-span-6 mb-8" />)}
+	{
+		cases?.map((card) => (
+			<CaseCard {...card} class="z-10 col-span-6 mb-8 md:col-span-3" />
+		))
+	}
 </LandingLayout>
