feat: Footer magnetic

--- a/apps/web/src/components/astro/Button.astro
+++ b/apps/web/src/components/astro/Button.astro
@@ -17,7 +17,7 @@ const { link, icon } = Astro.props;
 	<button type="button" class="flex cursor-pointer items-center gap-[0.25rem]">
 		{icon && <Icon icon={icon} class="flex h-[1.25rem] w-[1.25rem]" />}
 		<span
-			class="decoration-novo-blue-30 underline decoration-1 underline-offset-[25%]"
+			class="underline decoration-current/30 decoration-1 underline-offset-[25%]"
 		>
 			{link?.text}
 		</span>
