--- a/apps/web/src/components/astro/Button.astro
+++ b/apps/web/src/components/astro/Button.astro
@@ -14,12 +14,12 @@ const { link, icon } = Astro.props;
 ---
 
 <Link class="text-[1.125rem] leading-[140%] font-medium" link={link}>
-	<button type="button" class="flex cursor-pointer items-center gap-[0.25rem]">
+	<div class="flex cursor-pointer items-center gap-[0.25rem]">
 		{icon && <Icon icon={icon} class="flex h-[1.25rem] w-[1.25rem]" />}
 		<span
 			class="underline decoration-current/30 decoration-1 underline-offset-[25%]"
 		>
 			{link?.text}
 		</span>
-	</button>
+	</div>
 </Link>
