--- a/apps/web/src/components/astro/Footer.astro
+++ b/apps/web/src/components/astro/Footer.astro
@@ -10,7 +10,7 @@ type Props = GlobalSettings;
 const { footer } = Astro.props;
 ---
 
-<footer class="bg-grey-blue mt-24 w-full pt-12 text-white">
+<footer class="bg-blue-grey mt-24 w-full pt-12 text-white">
 	<div
 		class="mx-auto grid w-full max-w-[100rem] gap-[12.5rem] px-[1.5rem] py-[1.5rem] md:px-[3rem] md:pb-[2.5rem]"
 	>
@@ -27,20 +27,27 @@ const { footer } = Astro.props;
 				<Button link={footer?.backlink} icon="arrow_outward" />
 			</MagneticHover>
 		</div>
-		<nav>
-			<ul
-				class="grid max-w-[100rem] gap-4 text-[0.875rem] leading-[120%] font-medium md:flex md:gap-[2rem]"
-			>
-				{
-					footer?.links?.map((link) => (
-						<li>
-							<Link link={link} class="text-white">
-								{link.text}
-							</Link>
-						</li>
-					))
-				}
-			</ul>
-		</nav>
+		<div class="space-y-12">
+			<nav>
+				<ul
+					class="grid max-w-[100rem] gap-4 text-[0.875rem] leading-[120%] font-medium md:flex md:gap-[2rem]"
+				>
+					{
+						footer?.links?.map((link) => (
+							<li>
+								<Link link={link} class="text-white hover:underline">
+									{link.text}
+								</Link>
+							</li>
+						))
+					}
+				</ul>
+			</nav>
+			{
+				footer?.copyright && (
+					<p class="max-w-4xl text-sm leading-[120%]">{footer?.copyright}</p>
+				)
+			}
+		</div>
 	</div>
 </footer>
