--- a/apps/web/src/layouts/PageLayout.astro
+++ b/apps/web/src/layouts/PageLayout.astro
@@ -55,7 +55,9 @@ const pageTitle = title ? `${globalTitle} · ${title}` : globalTitle;
 
 		<title>{pageTitle}</title>
 	</head>
-	<body class="min-h-screen bg-white">
+	<body
+		class="selection:bg-novo-blue min-h-screen bg-white selection:text-white"
+	>
 		<Header {...globalSettings} />
 		<main class="w-full">
 			<div class="mx-auto flex max-w-[100rem] flex-col">
